# satpower

./: LICENSE  README.md  pyproject.toml
docs/: api-reference.md  architecture.md  cli-reference.md  component-database.md  conf.py  getting-started.md  index.md  mission-config.md  physics-models.md  saas-api.md  user-guide.md
examples/: iss_orbit_power.py  mission_lifetime.py  quickstart.py  run_scenarios.py
src/satpower/: __init__.py  __main__.py
src/satpower/api/: __init__.py  _errors.py  _schemas.py  _serializers.py  _services.py
src/satpower/battery/: __init__.py  _aging.py  _cell.py  _pack.py  _soc.py
src/satpower/data/: __init__.py  _loader.py  _registry.py
src/satpower/loads/: __init__.py  _profile.py  _scheduler.py  _templates.py
src/satpower/mission/: __init__.py  _builder.py  _config.py
tests/: conftest.py
tests/test_api/: test_services.py
tests/test_battery/: test_aging.py  test_cell.py  test_pack.py
tests/test_data/: test_registry.py
tests/test_integration/: test_physics_full.py
tests/test_loads/: test_profile.py  test_scheduler.py
tests/test_mission/: test_config.py  test_scenarios.py
tests/test_orbit/: test_eclipse.py  test_environment.py  test_propagator.py
tests/test_regulation/: test_bus.py  test_converter.py  test_eps_board.py
tests/test_simulation/: test_engine.py  test_lifetime.py  test_results.py
tests/test_solar/: test_cell.py  test_degradation.py  test_mppt.py  test_panel.py
tests/test_thermal/: test_model.py
tests/test_validation/: test_compatibility.py  test_reference_missions.py
(+45 files in other folders)
